use_undefined_identifier/c3/setup_epd_line
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/setup_epd_line/src/epd.c:638:7: error: use of undeclared identifier 'setup_epd_line_rankoffsets'
v24 = setup_epd_line_rankoffsets[v12 + 1]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/setup_epd_line/src/obj/epd.o] Error 1
